; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dst/extr_trans.c_dst_trans_remove_nolock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dst/extr_trans.c_dst_trans_remove_nolock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dst_trans = type { %struct.TYPE_2__, %struct.dst_node* }
%struct.TYPE_2__ = type { i64 }
%struct.dst_node = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dst_trans_remove_nolock(%struct.dst_trans* %0) #0 {
  %2 = alloca %struct.dst_trans*, align 8
  %3 = alloca %struct.dst_node*, align 8
  store %struct.dst_trans* %0, %struct.dst_trans** %2, align 8
  %4 = load %struct.dst_trans*, %struct.dst_trans** %2, align 8
  %5 = getelementptr inbounds %struct.dst_trans, %struct.dst_trans* %4, i32 0, i32 1
  %6 = load %struct.dst_node*, %struct.dst_node** %5, align 8
  store %struct.dst_node* %6, %struct.dst_node** %3, align 8
  %7 = load %struct.dst_trans*, %struct.dst_trans** %2, align 8
  %8 = getelementptr inbounds %struct.dst_trans, %struct.dst_trans* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %1
  %13 = load %struct.dst_trans*, %struct.dst_trans** %2, align 8
  %14 = getelementptr inbounds %struct.dst_trans, %struct.dst_trans* %13, i32 0, i32 0
  %15 = load %struct.dst_node*, %struct.dst_node** %3, align 8
  %16 = getelementptr inbounds %struct.dst_node, %struct.dst_node* %15, i32 0, i32 0
  %17 = call i32 @rb_erase(%struct.TYPE_2__* %14, i32* %16)
  %18 = load %struct.dst_trans*, %struct.dst_trans** %2, align 8
  %19 = getelementptr inbounds %struct.dst_trans, %struct.dst_trans* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  store i64 0, i64* %20, align 8
  br label %21

21:                                               ; preds = %12, %1
  ret i32 0
}

declare dso_local i32 @rb_erase(%struct.TYPE_2__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
